--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -1,53 +1,73 @@
 .faq {
-    font-family: sans-serif;
-    text-align: center;
-  }
-  
-  .question-section {
-    border-bottom: 1px solid lightgray;;
-    cursor: pointer;
-    width: 60vw;
-  }
-  
-  .question-align {
-    align-items: center;
-    display: flex;
-    min-height: 10px;
-    text-align: left;
-  }
-  
-  .question-align h4 {
-    margin-left: 8px;
-  }
-  
-  .question-styling {
-    font-size: 17px;
-    width: 100%;
-  }
-  
-  .question-icon {
-    background: none;
-    border: none;
-    color: #1b6aae;
-    cursor: pointer;
-    font-size: 22px;
-    margin-left: auto;
-    margin-right: 8px;
-  }
-  
-  .rotate {
-    transform: rotate(45deg);
-  }
-  
-  .answer-divider {
-    border-top: 1px solid lightgray;
-  }
-  
-  .answer {
-    margin-left: 8px;
-    margin-right: 8px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.6s ease;
-    text-align: left;
-  }
+  font-family: sans-serif;
+  text-align: center;
+  width: 60vw;
+  margin: 0 auto;
+}
+
+.faq-text {
+  text-align: center;
+  padding-top: 20px;
+}
+
+.faq-title {
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.faq-description {
+  width: 670px;
+  text-align: center;
+  padding: 40px;
+}
+
+.question-section {
+  border-bottom: 1px solid lightgray;
+  cursor: pointer;
+  padding: 10px 0;
+  text-align: left;
+  width: 400px;
+}
+
+.question-align {
+  display: flex;
+  align-items: center;
+}
+
+.question-align h4 {
+  margin: 0 0 0 8px;
+  font-size: 17px;
+  font-weight: normal;
+  width: calc(100% - 30px); /* Adjust to ensure proper space for icon */
+}
+
+.question-icon {
+  background: none;
+  border: none;
+  color: #1b6aae;
+  cursor: pointer;
+  font-size: 22px;
+  margin-left: auto;
+  transition: transform 0.3s;
+}
+
+.rotate {
+  transform: rotate(45deg);
+}
+
+.answer-divider {
+  border-top: 1px solid lightgray;
+  margin: 10px 0 0 0;
+}
+
+.answer {
+  margin: 8px 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.6s ease;
+  text-align: left;
+}
+
+.answer-active {
+  max-height: 300px; /* Adjust this value based on the content */
+}
